add spec for appointment
